Refactored a bit to avoid too much calculation

--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -338,7 +338,8 @@ nav {
 	&--2 {
 		background-color: $secondary;
 	}
-	&--3 {
+	&--3,
+	&--4 {
 		background-color: $separator-color;
 	}
 }
